--- a/index.html
+++ b/index.html
@@ -51,31 +51,31 @@
                         <div class="languageListAreaBoxs">
                             <li class="nav-link link" href="" id="ar" glot-model="sa" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-sa"></span>
-                                <a href="/">اللغة العربية</a>
+                                <a href="/" style="text-decoration: none;">اللغة العربية</a>
                             </li>
                             <li  class="nav-link link" href="" id="zh" glot-model="cn" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-cn"></span>
-                                <a href="/">中文</a>
+                                <a href="/" style="text-decoration: none;">中文</a>
                             </li>
                             <li  class="nav-link link" href="" id="en" glot-model="us" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-us"></span>
-                                <a href="/">English</a>
+                                <a href="/" style="text-decoration: none;">English</a>
                             </li>
                             <li  class="nav-link link" href="" id="id" glot-model="id" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-id"></span>
-                                <a href="/">Bahasa Indonesia</a>
+                                <a href="/" style="text-decoration: none;">Bahasa Indonesia</a>
                             </li>
                             <li class="nav-link link" href="" id="ja" glot-model="jp" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-jp"></span>
-                                <a href="/">日本語</a>
+                                <a href="/" style="text-decoration: none;">日本語</a>
                             </li>
                             <li  class="nav-link link" href="" id="ms" glot-model="my" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-my"></span>
-                                <a href="/">Bahasa Melayu</a>
+                                <a href="/" style="text-decoration: none;">Bahasa Melayu</a>
                             </li>
                             <li  class="nav-link link" href="" id="es" glot-model="es" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-es"></span>
-                                <a href="/">español</a>
+                                <a href="/" style="text-decoration: none;">español</a>
                             </li>
                         </div>
                     </div>
@@ -103,6 +103,11 @@
                             </a>
                             <div class="tool-body">
                                 <a class="tool-card" href="./tools/editor/webmanifest/">
+                                    <div class="badges-list">
+                                        <div class="badge" style="--tint: -150;" glot-model="Pre-Alpha">
+                                            Pre-Alpha
+                                        </div>
+                                    </div>
                                     <h3 class="text-\[1\.17em\]" glot-model="webmanifest">
                                         webmanifest
                                     </h3>
@@ -186,11 +191,49 @@
                             <a class="tool-card text-\[1\.17em\]" href="./under-development/">
                                 <h3 glot-model="Under+development">Under development</h3>
                             </a>
+                            <!--
                             <div class="tool-body">
                                 <a class="tool-card" href="#">
                                     <h3 class="text-\[1\.17em\]" glot-model="Site+system">
                                         Site system
                                     </h3>
+                                </a>
+                            </div>
+                            -->
+                            <div class="tool-body">
+                                <a href="./under-development/pages/9ead758a-fb37-4b55-bd9f-df282cd58495/" style="text-decoration: none;">
+                                    <div class="card" id="9ead758a-fb37-4b55-bd9f-df282cd58495">
+                                        <div class="card-content">
+                                            <div class="badges-list">
+                                                <div class="badge" style="--tint: 160;" glot-model="Tools">
+                                                    Tools
+                                                </div>
+                                                <div class="badge" style="--tint: -150;" glot-model="Pre-Alpha">
+                                                    Pre-Alpha
+                                                </div>
+                                            </div>
+                                            <div class="changelog-content">
+                                                <p glot-model="webmanifest">webmanifest</p>
+                                            </div>
+                                        </div>
+                                    </div>                                    
+                                </a>
+                                <a href="./under-development/pages/a2296206-25b7-4938-9584-84b6587149b5/" style="text-decoration: none;">
+                                    <div class="card" id="a2296206-25b7-4938-9584-84b6587149b5">
+                                        <div class="card-content">
+                                            <div class="badges-list">
+                                                <div class="badge" style="--tint: 300;" glot-model="page">
+                                                    page
+                                                </div>
+                                                <div class="badge" style="--tint: 124;" glot-model="development">
+                                                    development
+                                                </div>
+                                            </div>
+                                            <div class="changelog-content">
+                                                <p glot-model="Site+system">Site system</p>
+                                            </div>
+                                        </div>
+                                    </div>    
                                 </a>
                             </div>
                         </div>
@@ -230,6 +273,11 @@
                             </a>
                             <div class="tool-body">
                                 <a class="tool-card" href="./tools/editor/webmanifest/">
+                                    <div class="badges-list">
+                                        <div class="badge" style="--tint: -150;" glot-model="Pre-Alpha">
+                                            Pre-Alpha
+                                        </div>
+                                    </div>
                                     <h3 class="text-\[1\.17em\]" glot-model="webmanifest">
                                         webmanifest
                                     </h3>
