--- a/under-development/index.html
+++ b/under-development/index.html
@@ -51,31 +51,31 @@
                         <div class="languageListAreaBoxs">
                             <li class="nav-link link" href="" id="ar" glot-model="sa" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-sa"></span>
-                                <a href="/">اللغة العربية</a>
+                                <a href="/" style="text-decoration: none;">اللغة العربية</a>
                             </li>
                             <li  class="nav-link link" href="" id="zh" glot-model="cn" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-cn"></span>
-                                <a href="/">中文</a>
+                                <a href="/" style="text-decoration: none;">中文</a>
                             </li>
                             <li  class="nav-link link" href="" id="en" glot-model="us" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-us"></span>
-                                <a href="/">English</a>
+                                <a href="/" style="text-decoration: none;">English</a>
                             </li>
                             <li  class="nav-link link" href="" id="id" glot-model="id" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-id"></span>
-                                <a href="/">Bahasa Indonesia</a>
+                                <a href="/" style="text-decoration: none;">Bahasa Indonesia</a>
                             </li>
                             <li class="nav-link link" href="" id="ja" glot-model="jp" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-jp"></span>
-                                <a href="/">日本語</a>
+                                <a href="/" style="text-decoration: none;">日本語</a>
                             </li>
                             <li  class="nav-link link" href="" id="ms" glot-model="my" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-my"></span>
-                                <a href="/">Bahasa Melayu</a>
+                                <a href="/" style="text-decoration: none;">Bahasa Melayu</a>
                             </li>
                             <li  class="nav-link link" href="" id="es" glot-model="es" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-es"></span>
-                                <a href="/">español</a>
+                                <a href="/" style="text-decoration: none;">español</a>
                             </li>
                         </div>
                     </div>
@@ -97,25 +97,25 @@
                 <div class="card-column">
                     <span id="cardNull" class="note is-hidden">No results</span>
                     <div class="versionListBoxes animeSreddtUpfadeIn">
-                        <div class="card box">
+                        <div class="card box" id="9ead758a-fb37-4b55-bd9f-df282cd58495">
                             <div class="card-content">
                                 <div class="badges-list">
-                                    <div class="badge" style="--tint: 25;" glot-model="page">
-                                        page
+                                    <div class="badge" style="--tint: 160;" glot-model="Tools">
+                                        Tools
                                     </div>
-                                    <div class="badge" style="--tint: 124;" glot-model="development">
-                                        development
+                                    <div class="badge" style="--tint: -150;" glot-model="Pre-Alpha">
+                                        Pre-Alpha
                                     </div>
                                 </div>
                                 <div class="changelog-content">
-                                    <p glot-model="Site+system">Site system</p>
+                                    <p glot-model="webmanifest">webmanifest</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="card box">
+                        <div class="card box" id="a2296206-25b7-4938-9584-84b6587149b5">
                             <div class="card-content">
                                 <div class="badges-list">
-                                    <div class="badge" style="--tint: 50;" glot-model="page">
+                                    <div class="badge" style="--tint: 300;" glot-model="page">
                                         page
                                     </div>
                                     <div class="badge" style="--tint: 124;" glot-model="development">
