--- a/tools/editor/webmanifest/index.html
+++ b/tools/editor/webmanifest/index.html
@@ -14,8 +14,10 @@
                     sitePass();
                 }
             }
-        }
-        window.onload=sitePass();
+        };
+        if(location.hostname != '127.0.0.1'){
+            window.onload=sitePass();
+        };
     </script>
     <head>
         <meta charset="UTF-8">
@@ -29,7 +31,6 @@
         <link rel="manifest" href="../../../site-assets/manifest/webmanifest.json" />
         <!-- CSS -->
         <link rel="stylesheet" href="../../../site-assets/css/header.css" />
-
         <link rel="stylesheet" href="../../../site-assets/css/A-animation.css" />
         <link rel="stylesheet" href="../../../site-assets/css/A-main.css" />
         <link rel="stylesheet" href="../../../site-assets/css/A-parts.css" />
@@ -65,38 +66,38 @@
                 <div class="mobileSearch--WI2Tv"></div>
                 <div class="LeftCen">
                     <a href="../../../" aria-label="Discussions"><div class="LeftCenItem animeSreddtUpfadeIn"><i class="fa-solid fa-bell" style="font-size: 20px;"></i></div></a>
-                    <div class="LeftCenItem animeSreddtUpfadeIn"><i id="languageChange" class="fa-solid fa-earth-asia" style="font-size: 20px;" onclick="languageChangeBtn()"></i></div>
+                    <div class="LeftCenItem animeSreddtUpfadeIn" aria-label="language"><i id="languageChange" class="fa-solid fa-earth-asia" style="font-size: 20px;" onclick="languageChangeBtn()"></i></div>
                 </div>
                 <div class="languageListBox">
                     <div id="languageListArea" class="nav nav-masthead justify-content-center languageList">
                         <div class="languageListAreaBoxs">
                             <li class="nav-link link" href="" id="ar" glot-model="sa" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-sa"></span>
-                                <a href="/">اللغة العربية</a>
+                                <a href="/" style="text-decoration: none;">اللغة العربية</a>
                             </li>
                             <li  class="nav-link link" href="" id="zh" glot-model="cn" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-cn"></span>
-                                <a href="/">中文</a>
+                                <a href="/" style="text-decoration: none;">中文</a>
                             </li>
                             <li  class="nav-link link" href="" id="en" glot-model="us" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-us"></span>
-                                <a href="/">English</a>
+                                <a href="/" style="text-decoration: none;">English</a>
                             </li>
                             <li  class="nav-link link" href="" id="id" glot-model="id" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-id"></span>
-                                <a href="/">Bahasa Indonesia</a>
+                                <a href="/" style="text-decoration: none;">Bahasa Indonesia</a>
                             </li>
                             <li class="nav-link link" href="" id="ja" glot-model="jp" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-jp"></span>
-                                <a href="/">日本語</a>
+                                <a href="/" style="text-decoration: none;">日本語</a>
                             </li>
                             <li  class="nav-link link" href="" id="ms" glot-model="my" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-my"></span>
-                                <a href="/">Bahasa Melayu</a>
+                                <a href="/" style="text-decoration: none;">Bahasa Melayu</a>
                             </li>
                             <li  class="nav-link link" href="" id="es" glot-model="es" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-es"></span>
-                                <a href="/">español</a>
+                                <a href="/" style="text-decoration: none;">español</a>
                             </li>
                         </div>
                     </div>
@@ -134,6 +135,11 @@
         <!-- エディター -->
         <main id="main">
             <div class="tree" data-cy="tree">
+                <div class="badges-list" style="padding: 0px 0 10px 0;">
+                    <div class="badge" style="--tint: -150;" glot-model="Pre-Alpha_version">
+                        Pre-Alpha version
+                    </div>
+                </div>
                 <div class="node object-node" data-category="predicate">
                     <div class="node-header">
                         <div class="node-icon node-help">
@@ -171,7 +177,7 @@
                                     </span>
                                 </div>
                                 <label glot-model="name">name</label>
-                                <input type="text">
+                                <input id="codeData_name" type="text">
                             </div>
                         </div>
                         <div class="node string-node">
@@ -189,7 +195,7 @@
                                     </span>
                                 </div>
                                 <label glot-model="short_name">short_name</label>
-                                <input type="text">
+                                <input id="codeData_short_name" type="text">
                             </div>
                         </div>
                         <div class="node string-node">
@@ -207,7 +213,7 @@
                                     </span>
                                 </div>
                                 <label glot-model="start_url">start_url</label>
-                                <input type="url">
+                                <input id="codeData_start_url" type="url">
                             </div>
                         </div>
                         <div class="node string-node">
@@ -225,7 +231,7 @@
                                     </span>
                                 </div>
                                 <label glot-model="display">display</label>
-                                <select>
+                                <select id="codeData_display">
                                     <option value="fullscreen" glot-model="fullscreen">fullscreen</option>
                                     <option value="standalone" glot-model="standalone">standalone</option>
                                     <option value="minimal-ui" glot-model="minimal-ui">minimal-ui</option>
@@ -269,7 +275,7 @@
                                     </span>
                                 </div>
                                 <label glot-model="background_color">background_color</label>
-                                <input type="color" style="padding: 0 5px 0 5px; width: 40px;">
+                                <input id="codeData_background_color" type="color" value="#FF0000">
                             </div>
                         </div>
                         <div class="node string-node">
@@ -287,7 +293,7 @@
                                     </span>
                                 </div>
                                 <label glot-model="description">description</label>
-                                <textarea style="width: 236px;"></textarea>
+                                <textarea id="codeData_description" style="width: 236px;"></textarea>
                             </div>
                         </div>
                         <div class="node object-node">
@@ -313,9 +319,57 @@
                 </div>
             </div>
         </main>
+        <style>
+            
+        </style>
+        <input type="checkbox" id="rightActionsBtn" style="display: none;">
+        <div id="rightActions" class="popup-actions right-actions" style="--offset: -208px;">
+            <div class="popup-action action-preview tooltipped tip-nw" aria-label="Show preview">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16">
+                    <path fill-rule="evenodd" d="M1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0zM8 0a8 8 0 100 16A8 8 0 008 0zM6.379 5.227A.25.25 0 006 5.442v5.117a.25.25 0 00.379.214l4.264-2.559a.25.25 0 000-.428L6.379 5.227z"></path>
+                </svg>
+            </div>
+            <div id="actionShare" class="popup-action action-share shown tooltipped tip-nw" aria-label="Share">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16">
+                    <path fill-rule="evenodd" d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"></path>
+                </svg>
+            </div>
+            <div id="actioDownload" class="popup-action action-download shown tooltipped tip-nw" aria-label="Download" onclick="editor_code_download()">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16">
+                    <path fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z"></path>
+                </svg>
+            </div>
+            <div id="actionCopy" class="popup-action action-copy shown tooltipped tip-nw" aria-label="Copy" onclick="code_view_copy()">
+                <svg id="actionCopySvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16">
+                    <path fill-rule="evenodd" d="M5.75 1a.75.75 0 00-.75.75v3c0 .414.336.75.75.75h4.5a.75.75 0 00.75-.75v-3a.75.75 0 00-.75-.75h-4.5zm.75 3V2.5h3V4h-3zm-2.874-.467a.75.75 0 00-.752-1.298A1.75 1.75 0 002 3.75v9.5c0 .966.784 1.75 1.75 1.75h8.5A1.75 1.75 0 0014 13.25v-9.5a1.75 1.75 0 00-.874-1.515.75.75 0 10-.752 1.298.25.25 0 01.126.217v9.5a.25.25 0 01-.25.25h-8.5a.25.25 0 01-.25-.25v-9.5a.25.25 0 01.126-.217z"></path>
+                </svg>
+            </div>
+            <label for="rightActionsBtn">
+                <div id="actionCodeShown?" class="popup-action action-code shown tooltipped tip-nw" aria-label="Hide output">
+                    <svg id="actionCodeSvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16">
+                        <path fill-rule="evenodd" d="M6.22 3.22a.75.75 0 011.06 0l4.25 4.25a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06-1.06L9.94 8 6.22 4.28a.75.75 0 010-1.06z"></path>
+                    </svg>
+                </div>
+            </label>
+        </div>
+        <div class="popup-preview"></div>
+        <div id="EditorCodeDisplay" class="popup-source shown"><pre id="editor" class="source ace_editor ace-tm" draggable="false" style="font-size: 14px;"><div class="ace_layer ace_text-layer" style=" padding: 0px 4px;"><div class="ace_line" style="height:19px"><span class="ace_paren ace_lparen">{</span></div><div class="ace_line" style="height:19px">    <span class="ace_variable">"name"</span>: <span id="code_name" class="ace_string">""</span>,</div><div class="ace_line" style="height:19px">    <span class="ace_variable">"short_name"</span>: <span id="code_short_name" class="ace_string">""</span>,</div><div class="ace_line" style="height:19px">    <span class="ace_variable">"start_url"</span>: <span id="code_start_url" class="ace_string">""</span>,</div><div class="ace_line" style="height:19px">    <span class="ace_variable">"display_override"</span>: <span id="code_display_override" class="ace_string">""</span>,</div><div class="ace_line" style="height:19px">    <span class="ace_variable">"display"</span>: <span id="code_display" class="ace_string">""</span>,</div><div class="ace_line" style="height:19px">    <span class="ace_variable">"background_color"</span>: <span id="code_background_color" class="ace_string">""</span>,</div><div class="ace_line" style="height:19px">    <span class="ace_variable">"description"</span>: <span id="code_description" class="ace_string">""</span>,</div><div class="ace_line" style="height:19px">    <span class="ace_variable">"related_applications"</span>: <span id="code_related_applications" class="ace_string">""</span>,</div><div class="ace_line" style="height:19px"><span class="ace_paren ace_rparen">}</span></div></div></pre></div>
+
+        <script>
+            window.setInterval(checkCodeData, 100);
+
+            function checkCodeData(){
+                document.getElementById('code_name').innerHTML = ('"' + document.getElementById('codeData_name').value + '"');
+                document.getElementById('code_short_name').innerHTML = ('"' + document.getElementById('codeData_short_name').value + '"');
+                document.getElementById('code_start_url').innerHTML = ('"' + document.getElementById('codeData_start_url').value + '"');
+                document.getElementById('code_display').innerHTML = ('"' + document.getElementById('codeData_display').value + '"');
+                document.getElementById('code_background_color').innerHTML = ('"' + document.getElementById('codeData_background_color').value + '"');
+                document.getElementById('code_description').innerHTML = ('"' + document.getElementById('codeData_description').value.replace(/\r?\n/g,"") + '"');
+            };
+        </script>
 
         <!-- 左サイドバー表示・非表示ボタン-->
-        <input type="checkbox" id="leftActionsBtn">
+        <input type="checkbox" id="leftActionsBtn" style="display: none;">
         <div class="popup-actions left-actions" style="--offset: 50px;" id="left-actions">
             <div class="popup-action action-project shown tooltipped tip-ne" aria-label="editor sidebar">
                 <label for="leftActionsBtn">
@@ -332,9 +386,10 @@
         <!-- サイドバーサイドバー表示ボタン処理 -->
         <script>
             window.addEventListener('DOMContentLoaded',function(){
-                const checkboxSingle = document.getElementById('leftActionsBtn');
+                const checkboxSingleLeftActionsBtn = document.getElementById('leftActionsBtn');
+                const checkboxSingleRightActionsBtn = document.getElementById('rightActionsBtn');
                 
-                checkboxSingle.addEventListener('change',function(){
+                checkboxSingleLeftActionsBtn.addEventListener('change',function(){
                     if(this.checked) {
                         document.getElementById('leftActionsShow').style.display = 'none';
                         document.getElementById('leftActionsHide').style.display = 'block';
@@ -347,14 +402,56 @@
                         document.getElementById('main').classList.remove('has-project');
                     } 
                 });
+
+                checkboxSingleRightActionsBtn.addEventListener('change',function(){
+                    if(this.checked) {
+                        document.getElementById('rightActions').style = '--offset: -208px';
+                        document.getElementById('actioDownload').classList.add('shown');
+                        document.getElementById('actionCopy').classList.add('shown');
+                        document.getElementById('actionCodeShown?').ariaLabel = 'Hide output';
+                        document.getElementById('actionCodeSvg').innerHTML = (`<path fill-rule="evenodd" d="M6.22 3.22a.75.75 0 011.06 0l4.25 4.25a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06-1.06L9.94 8 6.22 4.28a.75.75 0 010-1.06z"></path>`);
+
+                        document.getElementById('EditorCodeDisplay').classList.add('shown');
+                    }else{
+                        document.getElementById('rightActions').style = '--offset: -108px';
+                        document.getElementById('actioDownload').classList.remove('shown');
+                        document.getElementById('actionCopy').classList.remove('shown');
+                        document.getElementById('actionCodeShown?').ariaLabel = 'Show output';
+                        document.getElementById('actionCodeSvg').innerHTML = (`<path fill-rule="evenodd" d="M4.72 3.22a.75.75 0 011.06 1.06L2.06 8l3.72 3.72a.75.75 0 11-1.06 1.06L.47 8.53a.75.75 0 010-1.06l4.25-4.25zm6.56 0a.75.75 0 10-1.06 1.06L13.94 8l-3.72 3.72a.75.75 0 101.06 1.06l4.25-4.25a.75.75 0 000-1.06l-4.25-4.25z"></path>`);
+
+                        document.getElementById('EditorCodeDisplay').classList.remove('shown');
+                    }
+                })
             });
         </script>
-
         <!-- 左サイドバー -->
         <div id="popup-project" class="popup-project">
-            Aa
+            <div class="project-controls">
+                <div icon="chevron_down" label="Drafts" tooltip="Switch project" tooltiploc="se" class="btn-menu undefined">
+                    <div class="btn tooltipped tip-se" aria-label="Switch project">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16">
+                            <path fill-rule="evenodd" d="M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z"></path>
+                        </svg>
+                        <span>Drafts</span>
+                    </div>
+                </div>
+                <div icon="kebab_horizontal" class="btn-menu undefined">
+                    <div class="btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16">
+                            <path d="M8 9a1.5 1.5 0 100-3 1.5 1.5 0 000 3zM1.5 9a1.5 1.5 0 100-3 1.5 1.5 0 000 3zm13 0a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"></path>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="file-view">
+                <div class="badges-list" style="padding: 5px 0 5px 8px;">
+                    <div class="badge" style="--tint: -150;" glot-model="Pre-Alpha">
+                        Pre-Alpha version
+                    </div>
+                </div>
+                <span>No files</span>
+            </div>
         </div>
-
     </body>
 
     <!-- ページロードアニメーション-->
