--- a/tools/index.html
+++ b/tools/index.html
@@ -51,31 +51,31 @@
                         <div class="languageListAreaBoxs">
                             <li class="nav-link link" href="" id="ar" glot-model="sa" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-sa"></span>
-                                <a href="/">اللغة العربية</a>
+                                <a href="/" style="text-decoration: none;">اللغة العربية</a>
                             </li>
                             <li  class="nav-link link" href="" id="zh" glot-model="cn" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-cn"></span>
-                                <a href="/">中文</a>
+                                <a href="/" style="text-decoration: none;">中文</a>
                             </li>
                             <li  class="nav-link link" href="" id="en" glot-model="us" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-us"></span>
-                                <a href="/">English</a>
+                                <a href="/" style="text-decoration: none;">English</a>
                             </li>
                             <li  class="nav-link link" href="" id="id" glot-model="id" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-id"></span>
-                                <a href="/">Bahasa Indonesia</a>
+                                <a href="/" style="text-decoration: none;">Bahasa Indonesia</a>
                             </li>
                             <li class="nav-link link" href="" id="ja" glot-model="jp" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-jp"></span>
-                                <a href="/">日本語</a>
+                                <a href="/" style="text-decoration: none;">日本語</a>
                             </li>
                             <li  class="nav-link link" href="" id="ms" glot-model="my" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-my"></span>
-                                <a href="/">Bahasa Melayu</a>
+                                <a href="/" style="text-decoration: none;">Bahasa Melayu</a>
                             </li>
                             <li  class="nav-link link" href="" id="es" glot-model="es" onclick="languageListAreaNone()">
                                 <span class="flag-icon flag-icon-es"></span>
-                                <a href="/">español</a>
+                                <a href="/" style="text-decoration: none;">español</a>
                             </li>
                         </div>
                     </div>
@@ -104,6 +104,11 @@
                                 <p class="card-subtitle">
                                     /webmanifest
                                 </p>
+                                <div class="badges-list">
+                                    <div class="badge" style="--tint: -150;" glot-model="Pre-Alpha">
+                                        Pre-Alpha
+                                    </div>
+                                </div>
                             </div>
                         </a>
                         <a class="card box" href="./editor/webmanifest/">
@@ -117,6 +122,11 @@
                                 <p class="card-subtitle">
                                     /speingcode-framework
                                 </p>
+                                <div class="badges-list">
+                                    <div class="badge" style="--tint: -200;" glot-model="Framework">
+                                        Framework
+                                    </div>
+                                </div>
                             </div>
                         </a>
                     </div>
